feat: application end-point with API test
