# swagger/v1/swagger.yaml
@@ -48,13 +48,6 @@ components:
       - id
       - type
       - attributes
-    job_single:
-      type: object
-      properties:
-        data:
-          "$ref": "#/components/schemas/job_properties"
-      required:
-      - data
     jobs_array:
       type: object
       properties:
@@ -64,7 +57,69 @@ components:
             "$ref": "#/components/schemas/job_properties"
       required:
       - data
+    application_properties:
+      type: object
+      properties:
+        id:
+          type: string
+          example: '100'
+        type:
+          type: string
+          example: job
+        attributes:
+          type: object
+          properties:
+            candidate_name:
+              type: string
+              example: Denys Taradada
+            status:
+              type: string
+              example: active
+            job_name:
+              type: string
+              example: Ruby Dev
+            first_interview_date:
+              type: datetime
+              example: ''
+          required:
+          - candidate_name
+          - status
+          - job_name
+          - first_interview_date
+      required:
+      - id
+      - type
+      - attributes
+    applications_array:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            "$ref": "#/components/schemas/application_properties"
+      required:
+      - data
 paths:
+  "/applications":
+    get:
+      summary: Retrieve all Applications with active jobs
+      tags:
+      - Applications
+      - index
+      parameters:
+      - name: page
+        in: query
+        required: false
+        description: Page number for pagination
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Applications page 2 retrieved
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/applications_array"
   "/jobs":
     get:
       summary: Retrieve all jobs with their associated metrics
